<resources>
    <string name="app_name">UsageOfIntentFlagsApp</string>
    <!--button texts-->
    <string name="launch_b">Click to launch second Activity on same stack </string>
    <string name="launch_c">Click to launch third Activity on same stack</string>
    <string name="launch_c_single_top">Click to launch the previous instance of third activity only, as single Top</string>
    <string name="launch_new_instance_a">Click to launch new instance of third activity on same stack</string>
    <string name="launch_new_instance_a_clear_stack">Click to launch new instance of first activity after clearing stack</string>
    <string name="launch_new_task">Click to launch new activity First in new stack</string>
    <string name="launch_after_clearing_stack">Click to launch previous state of First activity  and clearing the top stack</string>

    <!--text hint-->
    <string name="hint">To maintain the state of activity</string>

</resources>
